[project]
name = "isotools_extensions"
requires-python = ">= 3.11"
version = "0.1.0"
authors = [{name = "Brandon Seah", email = "brandon_seah@tll.org.sg"}]
dependencies = [
    "isotools @ git+https://github.com/kbseah/IsoTools2.git@d44452d7886f80d2a13f172ff25da9441e3b23f9",
    "numpy",
    "scipy",
    "matplotlib",
    "pandas"
]

[project.urls]
Homepage = "https://github.com/kbseah/isotools_extensions"
Repository = "https://github.com/kbseah/isotools_extensions.git"
Issues = "https://github.com/kbseah/isotools_extensions/issues"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >=77.0.3"]
